tests/baselines/reference/privateNamesAndIndexedAccess.errors.txt
privateNamesAndIndexedAccess.ts(9,28): error TS2339: Property '#bar' does not exist on type 'C'.


==== privateNamesAndIndexedAccess.ts (1 errors) ====
    class C {
        foo = 3;
        #bar = 3;
        constructor () {
            const ok: C["foo"] = 3;
            const badForNow: C[#bar] = 3;
    
            // will never use this syntax, already taken:
            const badAlways: C["#bar"] = 3; // Error
                               ~~~~~~
!!! error TS2339: Property '#bar' does not exist on type 'C'.
        }
    }
    